--- a/lib/hello.html
+++ b/lib/hello.html
@@ -4,9 +4,38 @@
   <link type="text/css" rel="stylesheet" media="all" href="style.css" />
   </head>
   <body>
-    <h1>Hello, World!</h1>
-		<p>
-	GCE The Biography of I I am looking forward to learning the true value of an education giving back to the community, as well as develop as a lifelong learner. I'm an Army Brat born in Fort Hood, Texas. I am an older brother who was raised by two parents from Mayaguez, Puerto Rico. I often try to spend time with family. I grew up in Germany, Maryland, and Virginia. I have traveled from New York to Florida. I was an altar boy at Catholic Church in Odenton. I was a Boy Scout in Laurel, Maryland. I played youth sports with the Bowie Boys and Girls Club including basketball and football. I attend six different elementary schools. I went to Robert Goddard Middle School in Greenbelt. I enjoy meeting new people and traveling plane, train or automobile. I served in the Armed Services from 2006-2008. I enjoy taking courses and advancing my education. I also enjoy volunteering at Non-Profit Organizations including Education Based Latino Outreach and Northern Virginia Family Services. I enjoy embracing my Puerto Rican heritage at Latin festivals. I have always enjoyed dancing and music. I enjoy spending time with family and friends. iBiography
-	</p>
+    <h1>The Biography of I</h1>
+		<button>iValues</button>
+	<p>I am looking forward to learning the true value of an education giving back to the community, as well as develop as a lifelong learner. </p>
+		<button>iBeginning</button>
+	<p>I'm an Army Brat born in Fort Hood, Texas. </p>
+		<button>iHeritage</button>
+	<p>I am an older brother who was raised by two parents from Mayaguez, Puerto Rico. </p>
+		<button>iReside</button>
+	<p>I grew up in Germany, Maryland, and Virginia. </p>
+		<button>iTravel</button>
+	<p>I have traveled from New York to Florida. </p>
+		<button>iPray</button>
+	<p>I was an altar boy at Catholic Church in Odenton. </p>
+		<button>iService</button>
+	<p>I was a Boy Scout in Laurel, Maryland. </p>
+		<button>iStudied</button>
+	<p>I played youth sports with the Bowie Boys and Girls Club including basketball and football. </p>
+		<button>iCommute</button>
+	<p>	I attend six different elementary schools. </p>
+		<button>iAttend</button>
+	<p>I went to Robert Goddard Middle School in Greenbelt. </p>
+		<button>iEnjoy</button>
+	<p>I enjoy meeting new people and traveling plane, train or automobile. </p>
+		<button>iServe</button>
+	<p>I served in the Armed Services from 2006-2008. <p>
+		<button>iStudy</button>
+	<p>I enjoy taking courses and advancing my education. </p>
+		<button>iVolunteer</button>
+	<p>I also enjoy volunteering at Non-Profit Organizations including Education Based Latino Outreach and Northern Virginia Family Services. </p>
+		<button>iEmbrace</button>
+	<p>I enjoy embracing my Puerto Rican heritage at Latin festivals. </p>
+		<button>iLeisure</button>
+	<p>I have always enjoyed dancing and music. <p>
   </body>
 </html>
