Added iGraduate JPEG's and added a file and folder into lib

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -19,7 +19,7 @@
 	<p>I was an altar boy at Catholic Church in Odenton. </p>
 		<button>iService</button>
 	<p>I was a Boy Scout in Laurel, Maryland. </p>
-		<button>iStudied</button>
+		<button>iPlay</button>
 	<p>I played youth sports with the Bowie Boys and Girls Club including basketball and football. </p>
 		<button>iCommute</button>
 	<p>	I attend six different elementary schools. </p>
@@ -33,6 +33,8 @@
 	<p>I enjoy taking courses and advancing my education. </p>
 		<button>iVolunteer</button>
 	<p>I also enjoy volunteering at Non-Profit Organizations including Education Based Latino Outreach and Northern Virginia Family Services. </p>
+		<button>iGraduate</button>
+	<p>I am a graduate of George Mason Univeristy class of 2014. </p>
 		<button>iEmbrace</button>
 	<p>I enjoy embracing my Puerto Rican heritage at Latin festivals. </p>
 		<button>iLeisure</button>
