Added JPEG's to iGraduate

--- a/lib/iGraduate/iGraduate.html
+++ b/lib/iGraduate/iGraduate.html
@@ -3,7 +3,72 @@
 <body>
 
 <h2>iGraduate</h2>
-<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\50262896-00101-0256.jpg" alt="Graduation_1" style="width:100%">
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\50262896-00101-0256.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\50262896-00201-0264.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\50262896-00301-0256.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\50262896-85201-0264.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\50262896-90000-0256.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\50264584-00801-0185.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0004.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0019.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0047.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0069.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0072.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0076.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0082.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0092.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0116.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0124.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0127.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0146.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0152.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0195.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-00701-0204.JPG" alt="Graduation_1" style="width:50%">
+
+<h2>iGraduate</h2>
+<img src="C:\Users\gce\Hello-Worlds\lib\iGraduate\img-50262896-01101-0053.JPG" alt="Graduation_1" style="width:50%">
+
+
 
 </body>
 </html>
