Made adjusmtents added link through button and numbering

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -33,7 +33,7 @@
 	<p>I enjoy taking courses and advancing my education. </p>
 		<button>iVolunteer</button>
 	<p>I also enjoy volunteering at Non-Profit Organizations including Education Based Latino Outreach and Northern Virginia Family Services. </p>
-		<button>iGraduate</button>
+		<button>C:\Users\gce\Hello-Worlds\lib\iGraduate</button>
 	<p>I am a graduate of George Mason Univeristy class of 2014. </p>
 		<button>iEmbrace</button>
 	<p>I enjoy embracing my Puerto Rican heritage at Latin festivals. </p>
