--- a/lib/hello.html
+++ b/lib/hello.html
@@ -33,8 +33,8 @@
 	<p>I enjoy taking courses and advancing my education. </p>
 		<button>iVolunteer</button>
 	<p>I also enjoy volunteering at Non-Profit Organizations including Education Based Latino Outreach and Northern Virginia Family Services. </p>
-		<button>iGraduate</button>
-	<p>I am a graduate of George Mason Univeristy class of 2014. </p>
+		<button><a href="iGraduate/iGraduate.html">iGraduate</a></button>
+	<p>I am a graduate of George Mason Univeristy class of  </p>
 		<button>iEmbrace</button>
 	<p>I enjoy embracing my Puerto Rican heritage at Latin festivals. </p>
 		<button>iLeisure</button>
