Adjustted the font and added graphics

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -4,40 +4,48 @@
   <link type="text/css" rel="stylesheet" media="all" href="style.css" />
   </head>
   <body>
-    <h1>The Biography of I</h1>
+  
+    <h1><strong>My iAutoBiography</strong></h1>
+	
+	<h2><img src="iGraphics/american-flag-2144392__340.jpeg" width="175" height="111"></h2>
+
+	<h3><img src="iGraphics/SamuelRodriguezmb.jpg" width="175" height="111"></h3>
+
+	<h4><img src="iGraphics/1476p_PUERTO RICO.jpg" width="175" height="111"></h4>
+
 		<button>iValues</button>
-	<p>I am looking forward to learning the true value of an education giving back to the community, as well as develop as a lifelong learner. </p>
+	<p><strong>I am looking forward to learning the true value of an education giving back to the community, as well as develop as a lifelong learner. </strong></p>
 		<button>iBeginning</button>
-	<p>I'm an Army Brat born in Fort Hood, Texas. </p>
+	<p><strong>I'm an Army Brat born in Fort Hood, Texas.</strong> </p>
 		<button>iHeritage</button>
-	<p>I am an older brother who was raised by two parents from Mayaguez, Puerto Rico. </p>
+	<p><strong>I am an older brother who was raised by two parents from Mayaguez, Puerto Rico.</strong> </p>
 		<button>iReside</button>
-	<p>I grew up in Germany, Maryland, and Virginia. </p>
+	<p><strong>I grew up in Germany, Maryland, and Virginia.</strong> </p>
 		<button>iTravel</button>
-	<p>I have traveled from New York to Florida. </p>
+	<p><strong>I have traveled from New York to Florida.</strong> </p>
 		<button>iPray</button>
-	<p>I was an altar boy at Catholic Church in Odenton. </p>
+	<p><strong>I was an altar boy at Catholic Church in Odenton.</strong> </p>
 		<button>iService</button>
-	<p>I was a Boy Scout in Laurel, Maryland. </p>
+	<p><strong>I was a Boy Scout in Laurel, Maryland.</strong> </p>
 		<button>iPlay</button>
-	<p>I played youth sports with the Bowie Boys and Girls Club including basketball and football. </p>
+	<p><strong>I played youth sports with the Bowie Boys and Girls Club including basketball and football.</strong> </p>
 		<button>iCommute</button>
-	<p>	I attend six different elementary schools. </p>
+	<p><strong>I attend six different elementary schools.</strong> </p>
 		<button>iAttend</button>
-	<p>I went to Robert Goddard Middle School in Greenbelt. </p>
+	<p><strong>I went to Robert Goddard Middle School in Greenbelt.</strong> </p>
 		<button>iEnjoy</button>
-	<p>I enjoy meeting new people and traveling plane, train or automobile. </p>
+	<p><strong>I enjoy meeting new people and traveling plane, train or automobile.</strong> </p>
 		<button>iServe</button>
-	<p>I served in the Armed Services from 2006-2008. <p>
+	<p><strong>I served in the Armed Services from 2006-2008.</strong> </p>
 		<button>iStudy</button>
-	<p>I enjoy taking courses and advancing my education. </p>
+	<p><strong>I enjoy taking courses and advancing my education.</strong></p>
 		<button>iVolunteer</button>
-	<p>I also enjoy volunteering at Non-Profit Organizations including Education Based Latino Outreach and Northern Virginia Family Services. </p>
+	<p><strong>I also enjoy volunteering at Non-Profit Organizations including Education Based Latino Outreach and Northern Virginia Family Services.</strong></p>
 		<button><a href="iGraduate/iGraduate.html">iGraduate</a></button>
-	<p>I am a graduate of George Mason Univeristy class of  </p>
+	<p><strong>I am a graduate of George Mason Univeristy class of 2014. </strong></p>
 		<button>iEmbrace</button>
-	<p>I enjoy embracing my Puerto Rican heritage at Latin festivals. </p>
+	<p><strong>I enjoy embracing my Puerto Rican heritage at Latin festivals.</strong></p>
 		<button>iLeisure</button>
-	<p>I have always enjoyed dancing and music. <p>
+	<p><strong>I have always enjoyed dancing and music.</strong><p>
   </body>
 </html>
