Created a psuedo banner for My iAutoBiography

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -5,7 +5,7 @@
   </head>
   <body>
   
-    <h1><strong>My iAutoBiography</strong></h1>
+    <h1><strong><u>My iAutoBiography</u></strong></h1>
 	
 	<h2><img src="iGraphics/american-flag-2144392__340.jpeg" width="175" height="111"></h2>
 
