--- a/lib/hello.html
+++ b/lib/hello.html
@@ -25,9 +25,9 @@
 	<p><strong>I have traveled from New York to Florida.</strong> </p>
 		<button>iPray</button>
 	<p><strong>I was an altar boy at Catholic Church in Odenton.</strong> </p>
-		<button>iService</button>
+		<button>iActive</button>
 	<p><strong>I was a Boy Scout in Laurel, Maryland.</strong> </p>
-		<button>iPlay</button>
+		<button>iParticipate</button>
 	<p><strong>I played youth sports with the Bowie Boys and Girls Club including basketball and football.</strong> </p>
 		<button>iCommute</button>
 	<p><strong>I attend six different elementary schools.</strong> </p>
