Consolidate iHeritage and eliminate iStudy

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -37,15 +37,11 @@
 	<p><strong>I enjoy meeting new people and traveling plane, train or automobile.</strong> </p>
 		<button>iServe</button>
 	<p><strong>I served in the Armed Services from 2006-2008.</strong> </p>
-		<button>iStudy</button>
-	<p><strong>I enjoy taking courses and advancing my education.</strong></p>
 		<button>iVolunteer</button>
 	<p><strong>I also enjoy volunteering at Non-Profit Organizations including Education Based Latino Outreach and Northern Virginia Family Services.</strong></p>
 		<button><a href="iGraduate/iGraduate.html">iGraduate</a></button>
 	<p><strong>I am a graduate of George Mason Univeristy class of 2014. </strong></p>
-		<button>iEmbrace</button>
-	<p><strong>I enjoy embracing my Puerto Rican heritage at Latin festivals.</strong></p>
-		<button>iLeisure</button>
-	<p><strong>I have always enjoyed dancing and music.</strong><p>
+		<button>iHeritage</button>
+	<p><strong>I enjoy embracing my Puerto Rican heritage at Latin festivals and I have always enjoyed dancing and music.</strong><p>
   </body>
 </html>
