Consolidated iFamily and eliminated iBeginning

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -15,10 +15,8 @@
 
 		<button>iValues</button>
 	<p><strong>I am looking forward to learning the true value of an education giving back to the community, as well as develop as a lifelong learner. </strong></p>
-		<button>iBeginning</button>
-	<p><strong>I'm an Army Brat born in Fort Hood, Texas.</strong> </p>
-		<button>iHeritage</button>
-	<p><strong>I am an older brother who was raised by two parents from Mayaguez, Puerto Rico.</strong> </p>
+		<button>iFamily</button>
+	<p><strong>I'm an Army Brat born in Fort Hood, Texas and I am an older brother who was raised by two parents from Mayaguez, Puerto Rico.</strong> </p>
 		<button>iReside</button>
 	<p><strong>I grew up in Germany, Maryland, and Virginia.</strong> </p>
 		<button>iTravel</button>
