--- a/lib/hello.html
+++ b/lib/hello.html
@@ -21,7 +21,7 @@
 	<p><strong>I grew up in Germany, Maryland, and Virginia.</strong> </p>
 		<button>iTravel</button>
 	<p><strong>I have traveled from New York to Florida.</strong> </p>
-		<button>iPray</button>
+		<button>iFaith</button>
 	<p><strong>I was an altar boy at Catholic Church in Odenton.</strong> </p>
 		<button>iActive</button>
 	<p><strong>I was a Boy Scout in Laurel, Maryland.</strong> </p>
